<?xml version="1.0"?>
<package format="2">
  <name>schunk_gripper_jpg_p_160_description</name>
  <version>0.0.0</version>
  <description>The schunk_gripper_jpg_p_160_description package</description>

    <maintainer email="m.delledonne002@unibs.it">Michele Delledonne</maintainer>

    <license>BSD3</license>

    <url type="website">https://github.com/JRL-CARI-CNR-UNIBS/schunk_gripper_jpg_p_160_description</url>

    <author email="m.delledonne002@unibs.it">Michele Delledonne</author>
    <buildtool_depend>catkin</buildtool_depend>
    <depend>rospy</depend>
    <depend>message_generation</depend>
    <depend>std_msgs</depend>
    <depend>message_runtime</depend>
    <depend>pybullet_utils</depend>

    <export>
    </export>
  </package>
