<?xml version="1.0"?>
<package format="3">
  <name>schunk_gripper_jpg_p_160_description</name>
  <version>0.0.0</version>
  <description>The schunk_gripper_jpg_p_160_description package</description>

    <maintainer email="m.delledonne002@unibs.it">Michele Delledonne</maintainer>

    <license>TODO</license>

    <url type="website">https://github.com/JRL-CARI-CNR-UNIBS/schunk_gripper_jpg_p_160_description</url>

    <author email="m.delledonne002@unibs.it">Michele Delledonne</author>
    <buildtool_depend>ament_cmake</buildtool_depend>
    <depend>rclpy</depend>
    <!-- <depend>message_generation</depend> -->
    <depend>std_msgs</depend>

    <member_of_group>rosidl_interface_packages</member_of_group>

    <export>
      <build_type>ament_cmake</build_type>
    </export>
  </package>
